--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Assignment 0 test!</title>
-        <link href="style.css" rel="stylesheet" type="text/css">
+        <link href="styles.css" rel="stylesheet" type="text/css">
     </head>
     <body>
         <div class="image">
-            <img src="Lumnis Image.png" alt="alternatetext">
+            <img src="LumnisImage.png" alt="alternatetext">
             <h1>Welcome to Lumnis</h1>
         </div>
         <div class="center">
@@ -33,7 +33,6 @@
                 <li>Contact Us</li>
                 <li>User Agreement</li>
             </ul>
-        </footer>
-        
+        </footer> 
     </body>
 </html>
