--- a/login.html
+++ b/login.html
@@ -4,18 +4,18 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Main Page</title>
-        <link href="style.css" rel="stylesheet" type="text/css">
+        <link href="styles.css" rel="stylesheet" type="text/css">
     </head>
     <body>
         <div>
-            <h1>Login to Lumnis</h1> 
+            <h1>Login to Lumnis</h1>
         </div>
         <div>
             <form class="center">
-                <label for = "username"></label>
-                <input type="text" name="username" id="username" placeholder = "Enter your Username, Email or Phone Number"><br/>
-                <label for = "password"></label>
-                <input type="password" name="age" id = "password" placeholder = "Enter Password"><br/>
+                <label for= "username"></label>
+                <input type="text" name="username" id="username" placeholder = "Enter your Username, Email or Phone Number">
+                <label for= "password"></label>
+                <input type="password" name="age" id= "password" placeholder= "Enter Password">
                 <button type="submit" value="Submit">Login</button>
               </form>
         </div>
