--- a/signup.html
+++ b/signup.html
@@ -4,26 +4,26 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Body Page</title>
-        <link href="style.css" rel="stylesheet" type="text/css">
+        <link href="styles.css" rel="stylesheet" type="text/css">
     </head>
     <body>
         <div>
-            <h1>Create a free Lumnis Account</h1> 
+            <h1>Create a free Lumnis Account</h1>
         </div>
         <div>
             <form class="center">
-                <label for = "first_name"></label>
-                <input type="text" name="first_name" id="first_name" placeholder = "First Name"><br/>
-                <label for = "last_name"></label>
-                <input type="text" name="last_name" id="last_name" placeholder = "Last Name"><br/>
-                <label for = "email"></label>
-                <input type="email" name="email" id="email" placeholder = "Email Address"><br/>
-                <label for = "phone_number"></label>
-                <input type="number" name="phone_number" id="phone_number" placeholder = "000-000-0000"><br/>
-                <label for = "username"></label>
-                <input type="text" name="username" id="username" placeholder = "Enter a Username"><br/>
-                <label for = "password"></label>
-                <input type="password" name="password" id = "password" placeholder = "Enter a Password (min 8 characters)"><br/>
+                <label for= "first_name"></label>
+                <input type="text" name="first_name" id="first_name" placeholder= "First Name">
+                <label for= "last_name"></label>
+                <input type="text" name="last_name" id="last_name" placeholder= "Last Name">
+                <label for= "email"></label>
+                <input type="email" name="email" id="email" placeholder= "Email Address">
+                <label for= "phone_number"></label>
+                <input type="number" name="phone_number" id="phone_number" placeholder= "000-000-0000">
+                <label for= "username"></label>
+                <input type="text" name="username" id="username" placeholder= "Enter a Username">
+                <label for= "password"></label>
+                <input type="password" name="password" id = "password" placeholder= "Enter a Password (min 8 characters)">
                 <button type="submit" value="Submit">Join</button>
             </form>
             <p>By Clicking Join you agree to the User Agreements and Policies Found Below</p>
