--- a/login.html
+++ b/login.html
@@ -12,16 +12,16 @@
         </div>
         <div>
             <form class="center">
-                <label for= "username"></label>
-                <input type="text" name="username" id="username" placeholder = "Enter your Username, Email or Phone Number">
+                <label for="username"></label>
+                <input type="text" name="username" id="username" placeholder="Enter your Username, Email or Phone Number">
                 <label for= "password"></label>
-                <input type="password" name="age" id= "password" placeholder= "Enter Password">
+                <input type="password" name="age" id="password" placeholder="Enter Password">
                 <button type="submit" value="Submit">Login</button>
               </form>
         </div>
         <footer id="footer">
             <h1>Link Back to the Index Page</h1>
-            <a href="index.html">Back to the Home page</a>
+            <a href="home.html">Back to the Home page</a>
         </footer>
     </body>
 </html>
