--- a/about.html
+++ b/about.html
@@ -17,5 +17,8 @@
                 <li>Meet up with menthors and alumni across all departments</li>
             </ul>
         </div>
+        <footer id="footer">
+            <a href="index.html">Back to the Home page</a>
+        </footer>
     </body>
 </html>
