--- a/login.html
+++ b/login.html
@@ -21,7 +21,7 @@
         </div>
         <footer id="footer">
             <h1>Link Back to the Index Page</h1>
-            <a href="home.html">Back to the Home page</a>
+            <a href="index.html">Back to the Home page</a>
         </footer>
     </body>
 </html>
