--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Assignment 0 test!</title>
+        <title>Assignment 1 test!</title>
         <link href="styles.css" rel="stylesheet" type="text/css">
     </head>
     <body>
@@ -14,6 +14,7 @@
         <div class="center">
             <a href="login.html">Login to your Account</a>
             <a href="signup.html">Create an account</a>
+            <a href="about.html">About</a>
         </div>
         <div>
             <h2>Why should you join Lumnis</h2>
