--- a/signup.html
+++ b/signup.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Body Page</title>
+        <title>The Body Page</title>
         <link href="styles.css" rel="stylesheet" type="text/css">
     </head>
     <body>
