--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>The login Page</title>
+        <title>The login </title>
         <link href="styles.css" rel="stylesheet" type="text/css">
     </head>
     <body>
